--- a/thesis.tex
+++ b/thesis.tex
@@ -12,10 +12,11 @@
 \usepackage[vlined, ruled]{algorithm2e}
 \usepackage{multirow}
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{bm}
 \usepackage{lmodern}
 \usepackage{booktabs} % For formal tables
-
+\usepackage{float}
 
 % Using the tex-text mapping for ligatures etc.
 \defaultfontfeatures{Mapping=tex-text}
