--- a/clustering_techniques.tex
+++ b/clustering_techniques.tex
@@ -55,7 +55,7 @@ This makes the clusters unstable and costs unnecessary evaluations and computati
 
 The other problem for using the K-Means clustering is that one needs to decide the number of clusters.
 Determining the number of clusters is also a highly studied subjects, 
-such as the silhouette coefficient~\cite{}, the Gap statistics~\cite{}, and the Dip-test~\cite{}.
+such as the silhouette coefficient~\cite{}, the gap statistics~\cite{}, and the dip-test~\cite{}.
 Describe how silhouette score decides number of clusters 
 Describe how gap statistics estimates number of clusters.
 Describe how Dip-test checks unimodality
@@ -80,11 +80,17 @@ e.g. it cannot identify density nor unimodality.
 \caption{Comparing K-Means clustering with weighted Gaussian Distribution on CEC2005 F1 Problem}\label{fig:Clustering_comparison}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[ht!]
 \centering
-\includegraphics[width=\textwidth]{Clustering_comparison_F19}
-\caption{Comparing K-Means clustering with weighted Gaussian Distribution on CEC2005 F19 Problem}\label{fig:Clustering_comparison_F19}
+\includegraphics[width=\textwidth]{Clustering_comparison_F11}
+\caption{Comparing K-Means clustering with weighted Gaussian Distribution on CEC2005 F11 Problem}\label{fig:Clustering_comparison_F11}
 \end{figure}
+
+%\begin{figure}
+%\centering
+%\includegraphics[width=\textwidth]{Clustering_comparison_F19}
+%\caption{Comparing K-Means clustering with weighted Gaussian Distribution on CEC2005 F19 Problem}\label{fig:Clustering_comparison_F19}
+%\end{figure}
 
 
 \section{Heirarchical Clustering}
